DAQ-3449 Rollback Jython to 2.7.1
There are numerous issues which mostly result from Jython's
change to the permissions of compiled Jython bytecode.

Return to Jython 2.7.1 and investigate updating again for
the next release.

This was performed by running (from repository root):

 # 0c566527 DAQ-3222 Add .jython_cache to project gitignore files
 git rm -r *
 git rm .gitignore # hidden file not matched by previous
 git checkout 0c566527 .

and committing the result.

Change-Id: I814014f936d0bd2780ffbe9801c80948fb62f17a