@@ -1,29 +1,32 @@
 // Copyright (c) Corporation for National Research Initiatives
 package org.python.core;
 
-import org.objectweb.asm.ClassReader;
-
+import java.net.URL;
+import java.net.URLClassLoader;
+import java.util.List;
+import java.lang.reflect.Field;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.ObjectInputStream;
-import java.lang.reflect.Constructor;
-import java.lang.reflect.Field;
-import java.net.URL;
-import java.net.URLClassLoader;
-import java.util.LinkedList;
-import java.util.List;
+import javax.xml.bind.DatatypeConverter;
+
+import org.objectweb.asm.ClassReader;
+import org.python.util.Generic;
 
 /**
- * Utility class for loading compiled Python modules and Java classes defined in Python modules.
+ * Utility class for loading compiled python modules and java classes defined in python modules.
  */
 public class BytecodeLoader {
 
     /**
-     * Turn the Java class file data into a Java class.
+     * Turn the java byte code in data into a java class.
      *
-     * @param name fully-qualified binary name of the class
-     * @param data a class file as a byte array
-     * @param referents super-classes and interfaces that the new class will reference.
+     * @param name
+     *            the name of the class
+     * @param data
+     *            the java byte code.
+     * @param referents
+     *            superclasses and interfaces that the new class will reference.
      */
     @SuppressWarnings("unchecked")
     public static Class<?> makeClass(String name, byte[] data, Class<?>... referents) {
@@ -31,15 +34,24 @@ public class BytecodeLoader {
         Loader loader = new Loader();
         for (Class<?> referent : referents) {
             try {
-                loader.addParent(referent.getClassLoader());
-            } catch (SecurityException e) {}
+                ClassLoader cur = referent.getClassLoader();
+                if (cur != null) {
+                    loader.addParent(cur);
+                }
+            } catch (SecurityException e) {
+            }
         }
         Class<?> c = loader.loadClassFromBytes(name, data);
         if (ContainsPyBytecode.class.isAssignableFrom(c)) {
             try {
                 fixPyBytecode((Class<? extends ContainsPyBytecode>) c);
-            } catch (IllegalAccessException | NoSuchFieldException | ClassNotFoundException
-                    | IOException e) {
+            } catch (IllegalAccessException e) {
+                throw new RuntimeException(e);
+            } catch (NoSuchFieldException e) {
+                throw new RuntimeException(e);
+            } catch (ClassNotFoundException e) {
+                throw new RuntimeException(e);
+            } catch (IOException e) {
                 throw new RuntimeException(e);
             }
         }
@@ -48,11 +60,14 @@ public class BytecodeLoader {
     }
 
     /**
-     * Turn the Java class file data into a Java class.
+     * Turn the java byte code in data into a java class.
      *
-     * @param name the name of the class
-     * @param referents super-classes and interfaces that the new class will reference.
-     * @param data a class file as a byte array
+     * @param name
+     *            the name of the class
+     * @param referents
+     *            superclasses and interfaces that the new class will reference.
+     * @param data
+     *            the java byte code.
      */
     public static Class<?> makeClass(String name, List<Class<?>> referents, byte[] data) {
         if (referents != null) {
@@ -62,93 +77,15 @@ public class BytecodeLoader {
     }
 
     private static PyCode parseSerializedCode(String code_str)
-            throws IOException, ClassNotFoundException {
-        // From Java 8 use: byte[] b = Base64.getDecoder().decode(code_str);
-        byte[] b = base64decode(code_str);
+            throws IOException, ClassNotFoundException
+    {
+        byte[] b = DatatypeConverter.parseBase64Binary(code_str);
         ByteArrayInputStream bi = new ByteArrayInputStream(b);
         ObjectInputStream si = new ObjectInputStream(bi);
         PyBytecode meth_code = (PyBytecode) si.readObject();
         si.close();
         bi.close();
         return meth_code;
-    }
-
-    /**
-     * Implement a restricted form of base64 decoding compatible with the encoding in Module. This
-     * decoder treats characters outside the set of 64 necessary to encode data as errors, including
-     * the pad "=". As a result, the length of the argument exactly determines the size of array
-     * returned.
-     *
-     * @param src to decode
-     * @return a new byte array
-     * @throws IllegalArgumentException if src has an invalid character or impossible length.
-     */
-    private static byte[] base64decode(String src) throws IllegalArgumentException {
-
-        // Length L is a multiple of 4 plus 0, 2 or 3 tail characters (bearing 0, 8, or 16 bits)
-        final int L = src.length();
-        final int tail = L % 4; // 0 to 3 where 1 (an extra 6 bits) is invalid.
-        if (tail == 1) {
-            throw new IllegalArgumentException("Input length invalid (4n+1)");
-        }
-
-        // src encodes exactly this many bytes:
-        final int N = (L / 4) * 3 + (tail > 0 ? tail - 1 : 0);
-        byte[] data = new byte[N];
-
-        // Work through src in blocks of 4
-        int s = 0, b = 0, quantum;
-        while (s <= L - 4) {
-            // Process src[s:s+4]
-            quantum = (base64CharToBits(src.charAt(s++)) << 18)
-                    + (base64CharToBits(src.charAt(s++)) << 12)
-                    + (base64CharToBits(src.charAt(s++)) << 6) + base64CharToBits(src.charAt(s++));
-            data[b++] = (byte) (quantum >> 16);
-            data[b++] = (byte) (quantum >> 8);
-            data[b++] = (byte) quantum;
-        }
-
-        // Now deal with 2 or 3 tail characters, generating one or two bytes.
-        if (tail >= 2) {
-            // Repeat the loop body, but everything is 8 bits to the right.
-            quantum = (base64CharToBits(src.charAt(s++)) << 10)
-                    + (base64CharToBits(src.charAt(s++)) << 4);
-            data[b++] = (byte) (quantum >> 8);
-            if (tail == 3) {
-                quantum += (base64CharToBits(src.charAt(s++)) >> 2);
-                data[b++] = (byte) quantum;
-            }
-        }
-
-        return data;
-    }
-
-    /**
-     * Helper for {@link #base64decode(String)}, converting one character.
-     *
-     * @param c to convert
-     * @return value 0..63
-     * @throws IllegalArgumentException if not a base64 character
-     */
-    private static int base64CharToBits(char c) throws IllegalArgumentException {
-        if (c >= 'a') {
-            if (c <= 'z') {
-                return c - 71; // c - 'a' + 26
-            }
-        } else if (c >= 'A') {
-            if (c <= 'Z') {
-                return c - 'A';
-            }
-        } else if (c >= '0') {
-            if (c <= '9') {
-                return c + 4; // c - '0' + 52
-            }
-        } else if (c == '+') {
-            return 62;
-        } else if (c == '/') {
-            return 63;
-        }
-        throw new IllegalArgumentException("Invalid character " + c);
     }
 
     /**
@@ -178,14 +115,14 @@ public class BytecodeLoader {
      * special treatment after class-loading.
      */
     public static void fixPyBytecode(Class<? extends ContainsPyBytecode> c)
-            throws IllegalAccessException, NoSuchFieldException, java.io.IOException,
-            ClassNotFoundException {
+            throws IllegalAccessException, NoSuchFieldException, java.io.IOException, ClassNotFoundException
+    {
         Field[] fields = c.getDeclaredFields();
         for (Field fld: fields) {
             String fldName = fld.getName();
             if (fldName.startsWith("___")) {
                 fldName = fldName.substring(3);
-
+                
                 String[] splt = fldName.split("_");
                 if (splt[0].equals("0")) {
                     fldName = fldName.substring(2);
@@ -214,16 +151,13 @@ public class BytecodeLoader {
                                         if (Integer.parseInt(splt2[1]) == pos) {
                                             blt.append((String) fldPart.get(null));
                                             pos += 1;
-                                            if (pos == len) {
-                                                break;
-                                            }
+                                            if (pos == len) break;
                                         }
                                     }
                                 }
                                 if (pos0 == pos) {
-                                    throw new RuntimeException(
-                                            "Invalid PyBytecode splitting in " + c.getName()
-                                                    + ":\nSplit-index " + pos + " wasn't found.");
+                                    throw new RuntimeException("Invalid PyBytecode splitting in "+c.getName()+
+                                            ":\nSplit-index "+pos+" wasn't found.");
                                 }
                             }
                             codeField.set(null, parseSerializedCode(blt.toString()));
@@ -235,22 +169,20 @@ public class BytecodeLoader {
     }
 
     /**
-     * Turn the Java class file data for a compiled Python module into a {@code PyCode} object, by
-     * constructing an instance of the named class and calling the instance's
-     * {@link PyRunnable#getMain()}.
+     * Turn the java byte code for a compiled python module into a java class.
      *
-     * @param name fully-qualified binary name of the class
-     * @param data a class file as a byte array
-     * @param filename to provide to the constructor of the named class
-     * @return the {@code PyCode} object produced by the named class' {@code getMain}
+     * @param name
+     *            the name of the class
+     * @param data
+     *            the java byte code.
      */
     public static PyCode makeCode(String name, byte[] data, String filename) {
         try {
             Class<?> c = makeClass(name, data);
-            // A compiled module has a constructor taking a String filename argument.
-            Constructor<?> cons = c.getConstructor(new Class<?>[] {String.class});
-            Object instance = cons.newInstance(new Object[] {filename});
-            PyCode result = ((PyRunnable) instance).getMain();
+            Object o = c.getConstructor(new Class[] {String.class})
+                    .newInstance(new Object[] {filename});
+
+            PyCode result = ((PyRunnable)o).getMain();
             return result;
         } catch (Exception e) {
             throw Py.JavaError(e);
@@ -259,17 +191,16 @@ public class BytecodeLoader {
 
     public static class Loader extends URLClassLoader {
 
-        private LinkedList<ClassLoader> parents = new LinkedList<>();
+        private List<ClassLoader> parents = Generic.list();
 
         public Loader() {
             super(new URL[0]);
             parents.add(imp.getSyspathJavaLoader());
         }
 
-        /** Add given loader at the front of the list of the parent list (if not {@code null}). */
         public void addParent(ClassLoader referent) {
-            if (referent != null && !parents.contains(referent)) {
-                parents.addFirst(referent);
+            if (!parents.contains(referent)) {
+                parents.add(0, referent);
             }
         }
 
@@ -288,15 +219,6 @@ public class BytecodeLoader {
             throw new ClassNotFoundException(name);
         }
 
-        /**
-         * Define the named class using the class file data provided, and resolve it. (See JVM
-         * specification.) For class names ending "$py", this method may adjust that name to that
-         * found in the class file itself.
-         *
-         * @param name fully-qualified binary name of the class
-         * @param data a class file as a byte array
-         * @return the defined and resolved class
-         */
         public Class<?> loadClassFromBytes(String name, byte[] data) {
             if (name.endsWith("$py")) {
                 try {
